<resources>
    <string name="app_name">Seek</string>
    <string name="app_id">1597566493892282</string>

    <string name="auto_complete_friends">Find your Friends!</string>
    <string-array name="names_array">
        <item>John Smith</item>
        <item>Jeremy Lin</item>
        <item>Mario</item>
    </string-array>

    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>

    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>

    <string name="invite_friends">Invite!</string>

    <string name="view_history">History</string>

</resources>
